# incy_wincy

./: .hgignore  CMakeLists.txt  README.md
cmake/: Findrbdl_muscle.cmake
eval/: plot.py  run_integrators.py
models/: animation.csv  ballPlaneContact.lua  incyWincyPlaneContact.lua  incyWincyPlaneContactDev.lua  incyWincyPlaneContactSimplified.lua  motion_spider.txt
src/: IncyWincy.cpp  IncyWincyDev.cpp  IncyWincyDev.h  IncyWincySimplified.cpp  Models.h  NumericalJacobian.h  ProximalPolicyOptimization.h  ReplayMemory.h  Timer.h  bouncingBallBenchmark.cc  incyWincy.cpp  incyWincyBenchmark.cc  incyWincyDev.cc  main.cpp
src/numerical_jacobian/: CMakeLists.txt  ContactToolkit.h  numerical_jacobian.cpp  numerical_jacobian_incyWincy.cpp  test_timer.cpp
src/numerical_jacobian/cmake/: Findrbdl_geometry.cmake  Findrbdl_luamodel.cmake
src/proximal_policy_optimization/: Memory.h  Models.h  ProximalPolicyOptimization.h  ReplayMemory.h  Rollouts.h
